Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24120

Regression: Hiding QWidget exits event loop

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.0 Beta 1
    • 5.0.0
    • Core: Event loop
    • None
    • 66603985f2de74ac5f3bd5d259f0e65f710f62d7

    Description

      Change a512e210ac5b032c5fc2edf1ddf72e5a414485fd / http://codereview.qt-project.org/#change,10408 added the reference counting / quit lock feature to the event loop handling. Unfortunately the change introduced a regression that's affecting us in WebKit:

      Hiding a QWidget causes QWindow::setVisible to be called, which dereferences the application and may cause the event loop to terminate. The attached simple test case reproduces the issue.

      Compiled with Qt 4 pressing the button merely hides it but the event loop is not terminate. In Qt 5 after the change the event loop is terminated.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            shausman Simon Hausmann
            shausman Simon Hausmann
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes